# Py-

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  grammar.ebnf  plan.txt  wiki.md
.github/workflows/: build.yml  release.yml
assets/: tiles.ppm
docs/wiki/: pypp-0.4.0-graphics-update.md
examples/: _tmp_obj.pypp  collision_raycast_demo.pypp  config.pypp  control_flow.pypp  effects_showcase.pypp  fib.pypp  geometry_collision_test.pypp  gfx_showcase.pypp  graphics.pypp  gx3d_frame.pypp  gx3d_live.pypp  gx3d_stability_demo.pypp  gx3d_test.pypp  hello.pypp  hello_bytecode.ppbc  import_demo.pypp  import_objects_demo.pypp  math_numpy_demo.pypp  menu_demo.pypp  multiplayer_test.pypp  objects.pypp  pong.pypp  pong_game.pypp  pong_live.pypp  random_noise.pypp  shader_anim_demo.pypp  snake3d.pypp  snake_menu.pypp  sprite_demo.pypp  testlib.pypp  testprogram.pypp  torch_demo.pypp  v071_tilemap_demo.pypp  v07_showcase.pypp  v080_gx3d_graphics_stack.pypp
extensions/pypp-vscode/: README.md  language-configuration.json  package.json  pypp-language-support-0.4.0.vsix
extensions/pypp-vscode/snippets/: pypp.json
extensions/pypp-vscode/syntaxes/: pypp.tmLanguage.json
projects/mini_minecraft/: README.md  controls.pypp  main.pypp  settings.pypp
src/: main.cpp
tools/: add_title_image_to_pypp.py  generate_pypp_icon.py  install_pypp_file_icon.ps1  setup_cpp_env.py
wiki/: 3D-Graphics.md  AI-Library.md  Documentation.md  Extras.md  Graphics.md  Home.md  Math-Library.md  Random-Noise.md  Start.md
